# MLOps-Assignments

381036_CSEAI_DevOps/DevOps/Ass_1_AWS/: index.html  package.json
381036_CSEAI_DevOps/DevOps/Ass_2_Docker/: Dockerfile  app.py
381036_CSEAI_DevOps/DevOps/Ass_2_Docker/static/: styles.css
381036_CSEAI_DevOps/DevOps/Ass_2_Docker/templates/: filtered_data.html  (+1 more)
381036_CSEAI_DevOps/DevOps/Ass_3_Kubernetes/: Deamonset.yaml  pod.yaml  pull-secrets.yaml  replica-set.yaml  services.yml
381036_CSEAI_Kserve/Kserve/Ass_1_Disease_Prediction/: Dockerfile  Readme.md  crop_label_encoder.joblib  deployment.yaml  disease_prediction.py  inference.py  model.joblib  pyproject.toml  risk_label_encoder.joblib  scaler.joblib
381036_CSEAI_Kubeflow/Kubeflow/Ass_2_Disease_Risk/: disease-risk-pipeline.ipynb  disease_risk_model01.ipynb  disease_risk_model02.ipynb
381036_CSEAI_Observability/Observability/Ass_1_Elastic_Search/: elasticsearch_flask.py  observability.ipynb
381036_CSEAI_Python/Python/Assignment 1/: Assignment1.py
381036_CSEAI_Python/Python/Assignment 2/: Assignment2.py
381036_CSEAI_Python/Python/Assignment 3/: Assignment3.py
381036_CSEAI_Python/Python/Assignment 4/: Assignment4.py
381036_CSEAI_Python/Python/Assignment 5/: Assignment5.py
381036_CSEAI_Python/Python/Assignment 6/: Assignment6.py
381036_CSEAI_Streamlit/Streamlit/Assignment 1/: app.py
381036_CSEAI_Streamlit/Streamlit/Assignment 2/: app.py
381036_CSEAI_Streamlit/Streamlit/Assignment 3/: app.py
Streamlit/Assignment 1/: app.py
Streamlit/Assignment 2/: app.py
Streamlit/Assignment 3/: app.py
